# maida-tutorials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: maida.yml
.maida/: policy.yaml
.maida/baselines/: broken-pr-demo.json  coding-agent-refactor.json
CrewAI/: Mock CrewAI Agent.ipynb
LangChain/: Mock LangGraph Agent.ipynb
OpenAI/: Mock OpenAI Agent.ipynb
demos/broken_pr/: README.md  order_status_agent.py
demos/coding_agent_refactor/: README.md  refactoring_agent.py
tests/: test_broken_pr_demo.py  test_coding_agent_demo.py  test_tutorials.py
