[project]
name = "tutorials"
version = "0.1.0"
description = "Tutorials for building and Debugging AI Agents"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "jupyter",
    "ipykernel",
    "maida-ai",
]

[project.optional-dependencies]
crewai = [
    "maida-ai[crewai]",
]
langchain = [
    "maida-ai[langchain]",
]
openai = [
    "maida-ai[openai]",
]
